# rikou-meitan

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  TODO.md  build_dist.nu  deploy.nu  env.nu  postgre_start.nu
application/common/: Cargo.toml  README.md
application/common/src/: common_error.rs  lib.rs  query_info.rs
application/frontend/: .gitignore  Cargo.toml  README.md  test.nu
application/frontend/src/: commands.rs  error.rs  lib.rs  usecases.rs  utils.rs
application/frontend/src/commands/: episode_commands.rs  movie_clip_commands.rs  video_commands.rs
application/frontend/src/usecases/: episode_usecase.rs  movie_clip_usecase.rs  video_usecase.rs
application/frontend/test_server/: Cargo.toml
application/frontend/test_server/src/: main.rs
application/frontend/tests/: integration_test_episode.rs  integration_test_movie_clip.rs
application/integration_test/: Cargo.toml  README.md
application/integration_test/tests/: test_episode.rs  test_movie_clip.rs  test_video.rs  utils.rs
application/server/: Cargo.toml
application/server/src/: app_state.rs  commands.rs  handlers.rs  lib.rs  usecases.rs
application/server/src/commands/: episode_commands.rs  movie_clip_commands.rs
application/server/src/handlers/: episode_handlers.rs  movie_clip_handlers.rs
application/server/src/usecases/: episode_usecases.rs  episode_usecases_outer.rs  movie_clip_usecases.rs  movie_clip_usecases_outer.rs
application/serverside/: .gitignore  Cargo.toml  readme.md  rendered.html
application/serverside/examples/: api_test_server.rs  spa.rs  ssr.rs  ssr_make_file.rs
application/serverside/src/: app_state.rs  commands.rs  handlers.rs  lib.rs  main.rs  usecases.rs
application/serverside/src/commands/: episode_commands.rs  movie_clip_commands.rs  video_commands.rs
application/serverside/src/handlers/: episode_handlers.rs  kirinuki_handlers.rs  movie_clip_handlers.rs  original_handlers.rs  video_handlers.rs
application/serverside/src/usecases/: episode_usecases_outer.rs  movie_clip_usecases_outer.rs  video_usecases_outer.rs
dist_ssr/: index-3227cd1d2f617098.css  index-3b211abb0aece2f8.css  index-489cf045ca29ee45.css  index-663907843ea96e88.css  index-6ce8b6856695bf51.css  index-7ac2b5ddd53ad29.css  index-844f081ae9c6bc3.css  (+67 more)
domain/: Cargo.toml  README.md
domain/src/: date.rs  domain_error.rs  episode.rs  ids.rs  lib.rs  movie_clip.rs  movie_url.rs  repositories.rs  url.rs  urls.rs  video.rs
domain/src/episode/: episode_content.rs
domain/src/movie_clip/: movie_clip_title.rs  movie_url.rs  second.rs
domain/src/video_clip/: movie_clip_title.rs  movie_url.rs  second.rs
infrastructure/: Cargo.toml  README.md
infrastructure/src/: episode_repository_impl.rs  infra_error.rs  lib.rs  mock_episode_repository_impl.rs  mock_movie_clip_repository_impl.rs  movie_clip_repository_impl.rs  video_repository_impl.rs
infrastructure/src/episode_repository_impl/: db_episode_repository.rs  inmemory_episode_repository.rs  mock_episode_repository.rs
infrastructure/src/movie_clip_repository_impl/: db_movie_clip_repository.rs  inmemory_movie_clip_repository.rs  mock_movie_clip_repository.rs
infrastructure/src/video_repository_impl/: db_video_repository.rs  inmemory_video_repository.rs  mock_video_repository.rs
presentation/: .gitignore  Cargo.toml  Dioxus.toml  README.md  Trunk.toml  index.html  trunk_index.html  trunk_index_develop.html  trunk_index_fake.html  trunk_index_spa.html  trunk_index_ssr.html  trunk_index_test_api.html
presentation/contents/: orikou_desc.html  orikou_quiz.json
presentation/dist_spa/: index-7722c3c0d4387db9.css  index.html  presentation-b73bef906d494220.js  presentation-c94512555da2a580.js  presentation-c94512555da2a580_bg.wasm
presentation/dist_spa/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
presentation/dist_ssr/: index.html  presentation-594e56870953a1c6_bg.wasm  presentation-cd92fbc6f7afd704.js  presentation-ffef268301d3e3c.js  presentation-ffef268301d3e3c_bg.wasm
presentation/dist_ssr/snippets/dioxus-interpreter-js-1676574062e4c953/: inline0.js
presentation/example_dist/: index.html
presentation/example_dist/assets/dioxus/: {{project-name}}.js
presentation/examples/: hello_world.rs  intersection_player.rs  player.rs  simple_modal.rs  switch_image_frame.rs  sync_player.rs
presentation/examples/assets/: hello_world.css  simple_modal.css  switch_image_frame.css
presentation/examples/validation_input/: form_component.rs  form_omponent.rs  main.rs  validation_input_component.rs
presentation/src/: background.rs  components.rs  footer.rs  header.rs  lib.rs  main.rs  routes.rs  toc.rs  utils.rs
presentation/src/components/: accordion_episodes.rs  add_button.rs  edit_modal.rs  flow_script.rs  intersection_bottom.rs  movie_card.rs  player.rs  quiz.rs  spinner.rs  tooltip_menu_button.rs  validation_input.rs  video_page_menu.rs
presentation/src/header/: hamburger_button.rs  header_menu.rs  hidden_menu.rs  logo.rs  menu.rs  mode_change_button.rs
presentation/src/routes/: admin.rs  clips.rs  episodes.rs  home.rs  not_found.rs  videos.rs
presentation/src/routes/admin/: admin_login.rs  json_loader.rs
presentation/src/routes/clips/: edit_clip.rs
presentation/src/routes/episodes/: add_episode.rs  range_episodes.rs
presentation/src/routes/episodes/range_episodes/: edit_episode.rs
presentation/src/routes/home/: more_button.rs  toc.rs
presentation/src/routes/videos/: edit_video.rs
presentation/src/utils/: caption.rs  dark_mode.rs  overlay.rs  scroll_rock.rs  storage.rs
presentation/styles/: background.scss  contents.scss  footer.scss  header.scss  index.scss  static_var.scss  utils.scss
presentation/styles/components/: accordion_episodes.scss  add_button.scss  components.scss  edit_modal.scss  flow_script.scss  movie_card.scss  player.scss  quiz.scss  spinner.scss  tooltip_menu_button.scss  validation_input.scss  video_page_menu.scss
presentation/styles/header/: logo.scss
presentation/styles/routes/: admin.scss  clips.scss  episodes.scss  home.scss  not_found.scss  routes.scss  videos.scss
(+4 files in other folders)
