# [package]
# name = "rikou_meitan"
# version = "0.1.0"
# edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]

[workspace]
members = ["application/serverside","application/common","domain","infrastructure","config"]  # プレゼンテーション層はtargetに含めない
exclude = ["presentation", "application/frontend", "application/integration_test"]