[package]
name = "rikou_meitan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = ["application/serverside","application/common","domain","infrastructure","config"]  # プレゼンテーション層はtargetに含めない
exclude = ["presentation", "application/frontend", "application/integration_test"]

[dependencies]
domain = { path = "./domain", features = ["repo"] }
config = { path = "./config"}
infrastructure = { path = "./infrastructure"}
presentation = { path = "./presentation"}
serverside = { path = "./application/serverside"}
axum = "0.6.*"
tokio = { version = "1.*", features = ["full"]}
tower-http = { version = "0.3.*", features = ["cors", "fs"]}
tower = { version = "^0.4", features = ["full"]}
sqlx = { version = "0.6.*", features = ["postgres", "runtime-tokio-native-tls"] }
dioxus-ssr = "^0.3.0"
dioxus = "^0.3.2"
futures = "^0.3"
shuttle-axum = "0.12.0"
shuttle-runtime = "0.12.0"
shuttle-shared-db = { version = "0.12.0", features = ["postgres", "sqlx"]}