[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["dep:chrono", "dep:sqlx"]
repo = ["dep:async-trait"]

[dependencies]
thiserror = "1.*"
config = { path = "../config"}
uuid = { version = "1.*", features = ["v4"] }
# optional after it
chrono = { version = "0.4.*", optional = true }
sqlx = { version = "0.6.*", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"], optional = true }
async-trait = { version = "0.1.*", optional = true}


[dev-dependencies]
assert_matches = "1.*"
