[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["dep:sqlx"]
repo = ["dep:async-trait"]
fake = ["dep:fake", "dep:rand"]


[dependencies]
thiserror = "^1.0"
config = { path = "../config"}
uuid = { version = "^1.3", features = ["v4", "js"] }
serde = { version = "^1.0", features = ["derive"]}
chrono = { version = "^0.4"}
ammonia = "^3.3"
maplit = "^1.0"

# optional after it

sqlx = { version = "0.6.*", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"], optional = true }
async-trait = { version = "^0.1", optional = true}
fake = { version = "^2.5", features = ["derive", "chrono"], optional = true}
rand = { version = "^0.8", optional = true}


[dev-dependencies]
serde_json = "^1.0"
pretty_assertions = "^1.3"
fake = { version = "^2.5", features = ["derive", "chrono"]}
rand = { version = "^0.8"}