[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain", features = ["server", "repo"]}
thiserror = "1.*"
uuid = { version = "1.*", features = ["v4"] }
chrono = "0.4.*"
sqlx = { version = "0.6.*", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
async-trait = "0.1.*"
tokio = { version = "1.*", features = ["full"]}

[dev-dependencies]
rstest = "0.15.*"

