[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain", features = ["server", "repo"]}
thiserror = "1.*"
uuid = { version = "1.*", features = ["v4"] }
chrono = "0.4.*"
sqlx = { version = "0.6.*", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
async-trait = "0.1.*"
mockall = "0.11.*"

[dev-dependencies]
pretty_assertions = "1.3.*"
rstest = { version = "0.15.*"}
tokio = { version = "1.*", features = ["full"]}
assert_matches = "1.*"
