[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
domain = { path = "../domain", features = ["fake"]}
frontend = { path = "../application/frontend" }
wasm-bindgen = "^0.2"
web-sys = { version = "^0.3", features = [
    "HtmlElement",
    "CssStyleDeclaration",
    "Window",
    "MediaQueryList",
    "Event",
    "ScrollBehavior",
    "ScrollIntoViewOptions"
] }
dioxus = { version = "0.2.4", features = ["web", "router"] }
fermi = "0.2.1"
gloo-events = "^0.1"
gloo-utils = "^0.1"
gloo-timers = "0.2.6"
log = "^0.4"
wasm-logger = "^0.2"
plyr = { version = "0.0.4", features = ["options"]}
# plyr = { git = "https://github.com/deepgreenAN/plyr-rs", features = ["options"]}
gloo-intersection = { git = "https://github.com/deepgreenAN/intersection-wrapper" }
indexmap = "^1.9"

# optional
fake = "^2.5"


[dev-dependencies]
# Examples
time = { version = "^0.3", features = ["parsing", "macros"] }
thiserror = "^1"


[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
