[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
develop = []  # 開発中

[dependencies]
domain = { path = "../domain", features = ["fake"]}
frontend = { path = "../application/frontend" }
wasm-bindgen = "^0.2"
web-sys = { version = "^0.3", features = [
    "HtmlElement",
    "HtmlInputElement",
    "CssStyleDeclaration",
    "Window",
    "MediaQueryList",
    "Event",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "Blob", 
    "BlobPropertyBag", 
    "Url", 
    "HtmlAnchorElement",
    "FileList", 
    "File", 
    "FileReader"
] }
js-sys = "^0.3"
dioxus = "^0.3.2"
dioxus-web = "^0.3.1"
dioxus-router = "0.3.0"
fermi = "0.3.0"
gloo-events = "^0.1"
gloo-utils = "^0.1"
gloo-timers = "0.2.6"
log = "^0.4"
wasm-logger = "^0.2"
plyr = { version = "0.0.4", features = ["options"]}
gloo-intersection = { git = "https://github.com/deepgreenAN/intersection-wrapper" }
indexmap = "^1.9"
serde = { version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
rand = "^0.8"
strum = "0.24"
strum_macros = "0.24"
chrono = "^0.4"
# optional
fake = "^2.5"


[dev-dependencies]
# Examples
time = { version = "^0.3", features = ["parsing", "macros"] }
thiserror = "^1"


[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
