[package]
name = "presentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
develop = []
fake = ["frontend/fake"]
test_api = ["frontend/test_api"]
ssr = []

[dependencies]
domain = { path = "../domain"}
frontend = { path = "../application/frontend" }
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
web-sys = { version = "^0.3", features = [
    "HtmlElement",
    "HtmlInputElement",
    "CssStyleDeclaration",
    "Window",
    "MediaQueryList",
    "Event",
    "ScrollBehavior",
    "ScrollIntoViewOptions",
    "ScrollToOptions",
    "Blob", 
    "BlobPropertyBag", 
    "Url", 
    "HtmlAnchorElement",
    "FileList", 
    "File", 
    "FileReader"
] }
js-sys = "^0.3"
dioxus = "^0.3.2"
dioxus-web = { version = "^0.3.1", features = ["hydrate"]}
dioxus-router = "^0.3.0"
dioxus-ssr = "^0.3.0"
fermi = "0.3.0"
gloo-events = "^0.1"
gloo-utils = "^0.1"
gloo-timers = "^0.2"
gloo-storage = "^0.2"
log = "^0.4"
wasm-logger = "^0.2"
plyr = { version = "0.0.4", features = ["options"]}
gloo-intersection = { git = "https://github.com/deepgreenAN/intersection-wrapper" }
indexmap = "^1.9"
serde = { version = "^1.0", features = ["derive"]}
serde_json = "^1.0"
rand = "^0.8"
strum = "0.24"
strum_macros = "0.24"
chrono = "^0.4"


[dev-dependencies]
# Examples
time = { version = "^0.3", features = ["parsing", "macros"] }
thiserror = "^1"


[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# link time optimization using using whole-program analysis
lto = true
