[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["dep:infrastructure", "dep:domain", "dep:axum"]
front = ["dep:gloo-net"]

[dependencies]
thiserror = "1.*"
serde = { version = "1.*", features = ["derive"]}
domain = { path = "../../domain", optional = true}
infrastructure = { path = "../../infrastructure", optional = true}
axum = { version = "0.6.*", optional = true}
gloo-net = {version = "0.2.*", default-features = false, features = ["json"], optional = true}