[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = ["dep:infrastructure", "dep:axum"]

[dependencies]
domain = { path = "../../domain"}
thiserror = "1.*"
serde = { version = "1.*", features = ["derive"]}
typed-builder = "^0.14"

# 以下はoptional
infrastructure = { path = "../../infrastructure", optional = true}
axum = { version = "0.6.*", optional = true}

[dev-dependencies]
domain = { path = "../../domain", features = ["fake"]}
serde_json = "1.0.94"
fake = "2.5"
rand = "0.8"