[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test_api = []

[dependencies]
config = { path = "../../config"}
domain = { path = "../../domain"}
common = { path = "../common"}
gloo-net = "^0.2"
indexmap = "^1.9"
thiserror = "^1.0"

# optional dependencies


[dev-dependencies]
wasm-bindgen-test = "^0.3.34"
rstest = "^0.16"
assert_matches = "^1.5.0"
