[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test_api = []
fake = ["domain/fake", "dep:fake"]
integration_test = []

[dependencies]
config = { path = "../../config"}
domain = { path = "../../domain"}
common = { path = "../common"}
gloo-net = "^0.2"
indexmap = "^1.9"
thiserror = "^1.0"
serde = "^1.0"
derive-new = "^0.5"

# optional dependencies
fake = { version = "^2.5", optional = true}


[dev-dependencies]
domain = { path = "../../domain", features = ["fake"]}
fake = "^2.5"
rand = "0.8.5"
wasm-bindgen-test = "^0.3.34"
rstest = "^0.16"
pretty_assertions = "1.3.0"
wasm-rs-async-executor = { version = "0.9.0", features = ["cooperative"]}