[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
pretty_assertions = "1.3.*"
domain = { path = "../../domain", features = ["fake"]}
frontend = { path = "../frontend", features = ["test_api"]}
tokio = { version = "1.*", features = ["full"]}
futures = { version = "^0.3", features = ["executor"]}
# async-std = { version = "1.12.0", features = ["attributes"]}
once_cell = "^1.17"
fake = "^2.5"
rand = "^0.8"

# temp
reqwest = "0.11.17"
serde = "1.0.160"