[package]
name = "integration_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
pretty_assertions = "1.3.*"
domain = { path = "../../domain", features = ["fake"]}
frontend = { path = "../frontend", features = ["test_api"]}
tokio = { version = "1.*", features = ["rt"]}
once_cell = "^1.17"
fake = "^2.5"
rand = "^0.8"