[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../../domain", features = ["repo"] }
infrastructure = { path = "../../infrastructure"}
common = { path = "../common", features = ["server"]}
derive-new = "0.5.*"

[dev-dependencies]
pretty_assertions = "1.3.*"
rstest = { version = "0.15.*"}
tokio = { version = "1.*", features = ["full"]}
assert_matches = "1.*"