[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../../domain", features = ["repo"] }
infrastructure = { path = "../../infrastructure"}
common = { path = "../common", features = ["server"]}
derive-new = "0.5.*"
axum = "0.6.*"
serde = { version = "1.*", features = ["derive"]}

[dev-dependencies]
pretty_assertions = "1.3.*"
rstest = { version = "0.15.*"}
tokio = { version = "1.*", features = ["full"]}
assert_matches = "1.*"
tower = { version = "0.4.*"}
serde_json = "1.*"
mime = "0.3.*"
hyper = { version = "0.14.*", features = ["full"] }
