[package]
name = "serverside"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
inmemory = []

[dependencies]
domain = { path = "../../domain", features = ["repo"] }
config = { path = "../../config"}
infrastructure = { path = "../../infrastructure"}
presentation = { path = "../../presentation"}
common = { path = "../common", features = ["server"]}
derive-new = "0.5.*"
axum = "0.6.*"
serde = { version = "1.*", features = ["derive"]}
tokio = { version = "1.*", features = ["full"]}
tower-http = { version = "0.3.*", features = ["cors", "fs"]}
tower = { version = "^0.4", features = ["full"]}
sqlx = { version = "0.6.*", features = ["postgres", "runtime-tokio-native-tls"] }
strum = "^0.24"
strum_macros = "^0.24"
dioxus-ssr = "^0.3.0"
dioxus = "^0.3.2"
futures = "^0.3"
shuttle-axum = "0.13.0"
shuttle-runtime = "0.13.0"
shuttle-shared-db = { version = "0.13.0", features = ["postgres", "sqlx"]}

[dev-dependencies]
domain = { path = "../../domain", features = ["repo", "fake"] }
fake = "2.5.0"
pretty_assertions = "1.3.*"
rstest = { version = "0.15.*"}
serde_json = "1.*"
mime = "0.3.*"
hyper = { version = "0.14.*", features = ["full"] }
mockall = "0.11.*"
once_cell = "^1.16"
