[package]
name = "serverside"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
inmemory = []
ssr = ["dep:dioxus-ssr", "dep:dioxus", "dep:presentation"]

[dependencies]
domain = { path = "../../domain", features = ["repo"] }
config = { path = "../../config"}
infrastructure = { path = "../../infrastructure"}
common = { path = "../common", features = ["server"]}
derive-new = "^0.5"
axum = "^0.6"
serde = { version = "^1.0", features = ["derive"]}
tokio = { version = "1.28.0", features = ["full"]}
tower-http = { version = "0.3.5", features = ["cors", "fs"]}
tower = { version = "^0.4", features = ["full"]}
sqlx = { version = "^0.6", features = ["postgres", "runtime-tokio-native-tls"] }
strum = "^0.24"
strum_macros = "^0.24"
# Optional
dioxus-ssr = { version = "^0.3.0", optional = true }
dioxus = { version = "^0.3.2", optional = true}
presentation = { path = "../../presentation", optional = true}

[dev-dependencies]
domain = { path = "../../domain", features = ["repo", "fake"] }
fake = "2.5.0"
pretty_assertions = "1.3.*"
rstest = { version = "0.15.*"}
serde_json = "1.*"
mime = "0.3.*"
hyper = { version = "0.14.*", features = ["full"] }
mockall = "0.11.*"
once_cell = "^1.16"
