[package]
name = "test_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
config = { path = "../../../config"}
domain = { path = "../../../domain", features = ["server"]}
common = { path = "../../common", features = ["server"]}
axum = { version = "0.6.*"}
tokio = { version = "1.*", features = ["full"]}
tower-http = { version = "0.3.*", features = ["cors"]}
serde = { version = "1.*", features = ["derive"]}